# cpp_chess_engine

./: .gitignore  .woodpecker.yml  CMakeLists.txt  README.md  cpp_chess_engine.sln  linux_build.sh  output.txt  windows_build.sh
Tests/: Tests.vcxproj  Tests.vcxproj.filters
cpp_chess_engine/: BishopValidator.cpp  BishopValidator.hpp  BitOps.cpp  BitOps.hpp  Bitboard.hpp  ChessBoard.cpp  ChessBoard.hpp  Constants.hpp  FENTestRunner.cpp  FENTestRunner.hpp  FenMoveTester.cpp  FenMoveTester.hpp  GUIBoard.cpp  GUIBoard.hpp  GetBitIndex.cpp  KingValidator.cpp  KingValidator.hpp  KnightValidator.cpp  KnightValidator.hpp  Move.hpp  MoveValidator.hpp  PGNTestRunner.cpp  PGNTestRunner.hpp  PawnValidator.cpp  PawnValidator.hpp  RookValidator.cpp  RookValidator.hpp  Tests.cpp  cpp_chess_engine.filters  cpp_chess_engine.vcxproj  cpp_chess_engine.vcxproj.filters  main.cpp  pgn_tester_main.cpp  resource.h  sample_output.txt  testing_main.cpp
cpp_chess_engine/include/: GUIBoard.hpp
sample_pgns/: bad.pgn  lichess_GoonterYM_2025-08-25.pgn
scripts/: build_linux.sh  build_windows.ps1  generate_fen_tests.py  run_pgn_tests.sh  run_tests_windows.ps1
test_fens/: default_fen_move_tests.csv
test_pgns/: lichess_GoonterYM_2025-10-11.pgn
tests/: popcount_test.cpp
